--- a/views/reset.ejs
+++ b/views/reset.ejs
@@ -21,10 +21,10 @@ fecha: 16-09-18
 
 <script>
 function valpW(){
-  if(inpw.value==incpw.value){
+  if(in_pw.value==in_cpw.value){
      return true;
   }else{
-    incpw.
+    in_cpw.
       setCustomValidity("Passwords Don't Match");
         //alert("no match");
     return false;
