--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -38,7 +38,7 @@ fecha: 16-09-18
 </div>
     
 <div id="dvmsgnu">
-<form action="/signup" onsubmit="return valpW()"
+<form action="/sign_up" onsubmit="return valpW()"
   method="post">
   
 <input type="text" name="firstnm"
