--- a/client/styles/reporte.css
+++ b/client/styles/reporte.css
@@ -1,42 +1,42 @@
 /* fecha: 16-09-18, 19-09 */
 
-#dvreportescr{
+#dv_reporte_scr{
   display:flex; justify-content:center; align-items:center;
   position:absolute; top:0;
   width:100%;height:100%;
   background:rgba(0,0,0,0.7);
 }
-#dvreporte{
+#dv_reporte{
   width:50%;height:50%;
   /*border:1px dotted;*/}
 
-#dvreportetit{
+#dv_reporte_tit{
   display:flex; justify-content:center;
   position:relative;
 }
-#dvreportetit>div{
+#dv_reporte_tit>div{
   display:inline-block;
 }
 
-#dvreportetitnm{
+#dv_reporte_tit_nm{
   text-align:center;
   width:100%;
   background:black; color:yellow;
 }
-#dvreportetitx{
+#dv_reporte_tit_x{
   text-align:center;
   position:absolute; right:0px;
   width:50px;
   background:white;
   cursor:pointer;
 }
-#inreportetit{
+#in_reporte_tit{
   text-align:center;
   width:100%;
 }
-#tareporte{
+#ta_reporte{
   width:100%;height:50%;
 }
-#btsndreporte{
+#bt_snd_reporte{
   width:100%;
 }
